Updating frontend and backend code. Motsly implemented needs testing and bug fixes

--- a/views/pages/account/login.ejs
+++ b/views/pages/account/login.ejs
@@ -4,14 +4,14 @@
 <form action="/user/login" method="POST">
     <!--form section-->
   <div>
-    <label for="name">Email</label>
-    <input type="text" id="email" name="email" required></input>
+    <label for="name">Username</label>
+    <input type="text" name="username" required></input>
   </div>
     <!--end form section-->
     <!--form section-->
   <div>
     <label for="name">Password</label>
-    <input type="text" id="password" name="password" required></input>
+    <input type="text" id=" " name="password" required></input>
   </div>
     <!--end form section-->
     <button type="submit">Login</button>
